--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^5.3.1",
     "flyio": "^0.6.1",
     "font-awesome": "^4.7.0",
+    "minapp-api-promise": "^1.0.2",
     "mpvue": "^1.0.11",
     "vuex": "^3.0.1"
   },
